classDiagram
  class MaritalDetail {
    nameOfSpouse: String
    relationship: String
    address: String
    phone: String
    dateOfJoining: String
    employee: ObjectId
    deleted: Boolean
    organizationId: ObjectId [Required]
    createdAt: Date
    updatedAt: Date
  }

  MaritalDetail --> Employee
  MaritalDetail --> Organization
